--- a/clickerGame.css
+++ b/clickerGame.css
@@ -1,8 +1,8 @@
-body {
+body{
     background-color: rgb(24, 56, 161);
 }
 
-#background {
+.thing{
     width: 1000px;
     height: 900px;
     background-color: white;
@@ -12,20 +12,4 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 1%;
-}
-
-#game {
-    position: absolute;
-    left: 10px;
-
-}
-
-.form{
-    position: absolute;
-    left: 80px;
-}
-
-.clicker{
-    position: absolute;
-    left: 160px;
 }
