--- a/randomPassword.css
+++ b/randomPassword.css
@@ -9,6 +9,10 @@ body {
     border-radius: 10px;
     flex-direction: column;
     box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
   }
 
   *{
