--- a/index.css
+++ b/index.css
@@ -22,18 +22,20 @@ body {
 
 .form{
     position: absolute;
-    left: 170px;
+    left: 205px;
+    top: 175px;
 }
 
 .clicker{
     position: absolute;
-    left: 255px;
+    left: 80px;
 }
 
 
 .password{
     position: absolute;
-    left: 395px;
+    top: 175px;
+    left: 10px;
 }
 
 .wrapper {
@@ -44,4 +46,14 @@ body {
     height: 990px;
     width: 100px;
     background-color: white;
+}
+
+.sound {
+    position: absolute;
+    left: 130px;
+}
+
+.FinishedProjects {
+    position: absolute;
+    top: 100px;
 }
