--- a/clickerGame.css
+++ b/clickerGame.css
@@ -19,5 +19,10 @@ body{
     height: 100px;
     background-color: blue;
     border-radius: 50%;
-    left: 100px;
+}
+
+.upgrade1{
+    width: 100px;
+    height: 50px;
+    background-color: red;
 }
